--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,7 @@ nav{
             display: flex;
             a{
                 padding-left: 1em;
+
             }
             a:last-child{
                 padding-right: 1em;
@@ -51,9 +52,11 @@ nav{
         color: white;
         text-align: center;
         padding-top: 1.2em;
+        transition: all 0.5s ease-in-out;
     }
     a:hover{
         color: $first-color;
+        background-color: black;
         border-bottom: solid 1px $first-color;
     }
 
@@ -96,10 +99,10 @@ nav{
         font-weight: bold;
         border-radius: 5px;
         a{
+            white-space: nowrap;
             display: block;
             padding: 1em 2em;
             width: 8em;
-            height: 100%;
             text-decoration: none;
             color: whitesmoke;
             transition: all 0.5s ease-in-out;
@@ -186,6 +189,20 @@ nav{
         }
     }
 }
+.read-more{
+    display: block;
+    text-decoration: none;
+    color: whitesmoke;
+    width: 20%;
+    padding: 1% 3%;
+    margin-bottom: 5%;
+    background-color: $second-color;
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+}
+a:hover{
+    background-color: $first-color;
+}
 .text-section{
     margin: 0 15%;
     .image-creators{
@@ -240,4 +257,119 @@ nav{
 }
 span{
     color: $first-color;
+}
+.fifth-section{
+    background-color: $first-color;
+    padding: 5% 0;
+    text-align: center;
+    h1{
+        padding-top: 0;
+        font-size: 1.5em;
+        line-height: 2em;
+        font-weight: 400;
+    }
+    .image-section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .text{
+            width: 20%;
+        }
+        img{
+            border: solid 5px whitesmoke;
+            border-radius: 100px;
+            height: 100px;
+        }
+        h3{
+            color:$first-background-color;
+            font-weight: 800;
+            margin: 0;
+            padding-left: 3%;
+            padding-top: 4%;
+        }
+        p{
+            margin: 0;
+        }
+    }
+}
+.form-section{
+    padding: 10% 0;
+    background-color: $second-background-color;
+    .form-flex{
+        margin-top: 5%;
+        display: flex;
+        justify-content: center;
+        form{
+            width: 40%;
+            margin-left: 10%;
+            margin-right: 5%;
+            input, textarea{
+                width: 90%;
+                height: 4%;
+                background-color: #2a2d32;
+                border: solid 1px #2a2d32;
+                border-radius: 5px;
+                margin-bottom: 5%;
+                padding: 20px 20px;
+                color: whitesmoke;
+                font-weight: 800;
+            }
+            textarea{
+                height: 30%;
+                resize: none;
+            }
+            button{
+                background-color: $first-color;
+                width: 98%;
+                padding: 20px 20px;
+                border: 0;
+                border-radius: 5px;
+                font-weight: 800;
+                letter-spacing: 0.2em;
+                text-transform: uppercase;
+                transition: all 0.5s ease-in-out;
+            }
+            button:hover{
+                background-color: $second-color;
+            }
+        }
+        aside{
+            width: 40%;
+            margin-right: 5%;
+            h3{
+                color: $first-color;
+            }
+            p{
+                margin: 0;
+            }
+            p:nth-child(1){
+                font-size: 1.4em;
+
+            }
+        }
+    }
+}
+footer{
+    text-align: center;
+    margin-top: 5%;
+    ul{
+        display: flex;
+        justify-content: center;
+        li{
+            margin-left: 2%;
+            list-style: none;
+            a{
+                text-decoration: none;
+                font-size: 2.5em;
+                color: #2a2d32;
+                transition: all 0.5s ease-in-out;
+            }
+            a:hover{
+                color: whitesmoke;
+                background-color: $first-background-color;
+            }
+        }
+        
+    }
+
 }
