--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,7 @@ body{
     background-color: $first-background-color;
 }
 
-nav{
+.none-adaptive{
     background-color: black;
     color: white;
     display: flex;
@@ -35,11 +35,13 @@ nav{
     .nav-logo{
         margin-right: 5%;
         margin-left: 10%;
+        padding-top: 15px;
         background-color: $first-color;
         color: black;
         padding: 1.5% 0.5%;
         text-transform: uppercase;
         letter-spacing: 0.1em;
+        white-space: nowrap;
     }
     .social-icons{
         display: flex;
@@ -60,6 +62,30 @@ nav{
         border-bottom: solid 1px $first-color;
     }
 
+}
+.main-menu{
+    width: 100%;
+    display: none;
+    position: fixed;
+    padding: 15px 0;
+    background: black;
+    box-shadow: 0 0 5px #0a0a0a;
+    z-index: 1;
+    ul{
+        text-align: center;
+        li{
+            a{
+                text-decoration: none;
+                color: whitesmoke;
+            }
+            a:hover{
+                background-color: black;
+            }
+        }
+    }
+    p{
+        margin: 0;
+    }
 }
 .first-section{
     position: relative;
@@ -159,6 +185,7 @@ nav{
         background-color: $second-background-color;
     }
 }
+
 .offer{
     text-align: center;
     h1{
@@ -208,13 +235,11 @@ a:hover{
     .image-creators{
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
         .creators{
             padding-left: 5%;
             margin-top: 5%;
             width: 20%;
             img{
-                width: 200px;
                 height: 200px;
                 transition: all 0.5s ease-in-out;
             }
@@ -372,4 +397,157 @@ footer{
         
     }
 
+}
+
+@media screen and (max-width: 1050px){
+    .second-section{
+        .block-photos{
+            img{
+                width: 40%;
+                margin: 3%;
+            }
+        }
+    }
+    .third-section{
+        .flex-article{
+            padding: 2%;
+            justify-content: center;
+            .article-text{
+                width: 40%;
+            }
+        }
+    }
+    .fourth-section{
+        .flex-article{
+            justify-content: center;
+            padding: 2%;
+            .article-text{
+                width: 40%;
+            }
+        }
+    }
+}
+@media screen and (max-width: 768px){
+    body > header > article > section.fourth-section > article:nth-child(3) > div > div {
+        display: block;
+        .creators{
+            width: 90%;
+            display: flex;
+            justify-content: center;
+            img{
+                width: 90%;
+                height: 90%;
+            }
+        }
+    }
+    .none-adaptive{
+        display: none;       
+    }
+    .main-menu{
+        top: -250px;
+        padding: 0;
+        display: inline;
+        .menu-link{
+            width: 100%;
+        }
+        li{
+            width: 100%;
+            float: none;
+            padding: 10px 0;
+        }
+        .menu-visible{
+            display: block;
+            padding: 15px;
+            padding: 30px 10px;
+            background: $first-color;
+            text-align: center;
+            color: black;
+            font-weight: 800;
+            cursor: pointer;
+        }
+    }
+    .first-section{
+        margin-top: 50%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        .background-image{
+            display: none;
+        }
+        h1{
+            margin-top: -30%;
+            position: relative;
+            margin-bottom: 0;
+            hr{
+                width: 50%;
+            }
+        }
+        p{
+            position: relative;
+            margin: 5% 5% 10% 20%;   
+            width: 80%;
+        }
+        .button-read-more{
+            position: relative;
+            width: 25%;
+            margin-left: 0;
+                a{
+                    background-color: $second-color;
+                    color: whitesmoke;
+                    border-radius: 5px;
+                }
+        }
+    }
+    .second-section{
+        .block-photos{
+            margin-top: 0%;
+            img{
+                width: 45%;
+                margin: 1%;
+            }
+        }
+    }
+    .third-section{
+        .flex-article{
+            text-align: center;
+            .article-text{
+                width: 70%;
+            }
+        }
+    }
+    .fourth-section{
+        .flex-article{
+            text-align: center;
+            .article-text{
+                width: 70%;
+            }
+        }
+    }
+    .offer{
+        div{
+            a{
+                padding: 2%;
+                width: 40%;
+            }
+        }
+    }
+    .fifth-section{
+        padding: 5%;
+        p{
+            white-space: nowrap;
+        }
+    }
+    .form-section{
+        .form-flex{
+            display: block;
+            form{
+                width: 80%;
+            }
+            aside{
+                margin: 10%;
+                margin-left: 30%;
+                
+            }
+        }
+    }
 }
