--- a/css/main.scss
+++ b/css/main.scss
@@ -100,6 +100,7 @@ body{
     position: relative;
     color: whitesmoke;
     background-color: $first-background-color;
+    text-align: center;
     .background-image{
         width: 100%;
         height: 720px;
@@ -108,7 +109,7 @@ body{
     h1{
         position: absolute;
         bottom: 65%;
-        margin-left: 10%;
+        margin-left: 5%;
         font-weight: 700;
         font-size: 1.6em;
         hr{
@@ -119,6 +120,7 @@ body{
         }
     }
     p{
+        margin-top: 10%;
         position: absolute;
         bottom: 50%;
         margin-left: 11.3%;
@@ -126,9 +128,11 @@ body{
         font-size: 1.1em;
     }
     .button-read-more{
+        margin-bottom: 10%;
+        margin-top: 5%;
         position: absolute; 
         margin-left: 45%;
-        bottom: 13%;
+        bottom: 5%;
         background-color: $second-color;
         box-shadow: 1px 1px 5px black;
         font-weight: bold;
@@ -251,9 +255,9 @@ a:hover{
         display: flex;
         flex-wrap: wrap;
         .creators{
-            padding-left: 5%;
             margin-top: 5%;
             width: 20%;
+            padding-left: 5%;
             img{
                 height: 200px;
                 transition: 0.6s cubic-bezier(0.22, 1, 0.36, 1);
@@ -267,6 +271,9 @@ a:hover{
             p{
                 padding-left: 5%;
             }
+        }
+        .creators:first-child{
+            padding-left: 0;
         }
     }
 }
@@ -396,6 +403,7 @@ footer{
     ul{
         display: flex;
         justify-content: center;
+        padding: 0;
         li{
             margin-left: 2%;
             list-style: none;
@@ -461,6 +469,7 @@ footer{
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
+            padding-left: 0%;
             img{
                 width: 90%;
                 height: 90%;
@@ -506,18 +515,18 @@ footer{
             position: relative;
             margin-bottom: 0;
             hr{
-                width: 50%;
+                width: 95%;
             }
         }
         p{
             position: relative;
-            margin: 5% 5% 10% 20%;   
+            margin: 5% 5% 10% 10%;   
             width: 80%;
         }
         .button-read-more{
             position: relative;
             width: 25%;
-            margin-left: 0;
+            margin-left: -10%;
                 a{
                     background-color: $second-color;
                     color: whitesmoke;
@@ -529,8 +538,8 @@ footer{
         .block-photos{
             margin-top: 0%;
             img{
-                width: 45%;
-                margin: 1%;
+                width: 75%;
+                margin: 2%;
             }
         }
     }
@@ -579,4 +588,5 @@ footer{
             }
         }
     }
+
 }
